# dreamdisc25

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/: RCa06804  gameclient-win32.rc
assets/docs/: notes-512x512-multi-texture-mip-map-vq.psd
cmake/toolchains/: bsd.cmake  dreamcast.cmake  linux.cmake  osx.cmake  windows.cmake
cmake/toolchains/dreamcast/: dc-package.cmake
projects/Editor/: CMakeLists.txt  README.md
projects/Editor/cmake/: bsd.cmake  linux.cmake  osx.cmake  windows.cmake
projects/Editor/inc/Editor/: Editor.hh
projects/Editor/src/: Editor.cpp
projects/Engine/: CMakeLists.txt
projects/Engine/cmake/: bsd.cmake  dreamcast.cmake  linux.cmake  osx.cmake  windows.cmake
projects/Engine/inc/: Engine.hh
projects/Engine/inc/Engine/: Engine.hh
projects/Engine/inc/Engine/core/: Array.hh  String.hh  concepts.hh  core.hh
projects/Engine/inc/Engine/gfx/: Color.hh  IBillboard.hh  IBrush.hh  ICommandQueue.hh  IFrameBuffer.hh  IGfxBackend.hh  ILight.hh  ILightmap.hh  IMaterial.hh  IPen.hh  IShader.hh  ISprite.hh  ITexture.hh  ITileset.hh  IVertexBuffer.hh  IViewport.hh  IVisualFX.hh
projects/Engine/inc/Engine/gfx/backend/Direct3D/: IGBEDirect3D9.hh
projects/Engine/inc/Engine/gfx/backend/OpenGL/: IGBEOpenGL.hh
projects/Engine/inc/Engine/gfx/backend/OpenGLES/: IGBEOpenGLES.hh
projects/Engine/inc/Engine/gfx/backend/PowerVR/: IGBEPowerVR.hh
projects/Engine/inc/Engine/math/: Matrix.hh  Quaternion.hh  Vector.hh  simd.hh
projects/Engine/inc/Engine/physics/: Collider.hh  Deflector.hh  Force.hh  Motor.hh  Physics.hh  Ray.hh
projects/Engine/inc/Engine/scene/: Camera.hh  Curve.hh  IComponent.hh  IEntityComponent.hh  ISceneObject.hh  Mesh.hh  Particle.hh  Scene.hh
projects/Engine/inc/Engine/ui/: IWidget.hh
projects/Engine/inc/Engine/ui/widgets/: IButton.hh  ICheckbox.hh  ICursor.hh  IDropdown.hh  ILabel.hh  IPanel.hh  IProgress.hh  IRadio.hh  IScrollbar.hh  ISlider.hh  IToggle.hh
projects/Engine/inc/Engine/video/: IVideo.hh
projects/Engine/src/: Engine.cpp
projects/Game/: CMakeLists.txt
projects/Game/cmake/: bsd.cmake  dreamcast.cmake  linux.cmake  osx.cmake  windows.cmake
projects/Game/inc/: Game.hh
projects/Game/inc/Game/: Game.hh
projects/Game/src/: Game.cpp
rust/: Cargo.toml  README.md
rust/engine/: Cargo.toml
rust/engine/src/: lib.rs
rust/game/: Cargo.toml
rust/game/src/: main.rs
workspace/: DreamDisk25.sln  GameClient.vcxitems  GameClient.vcxitems.filters  GameEngine.vcxitems  GameEngine.vcxitems.filters
workspace/GameClient/GameClient_dreamcast/: GameClient_dreamcast.vcxproj
workspace/GameClient/GameClient_linux/: GameClient_linux.vcxproj
workspace/GameClient/GameClient_win32/: GameClient_win32.vcxproj
workspace/GameEngine/GameEngine_dreamcast/: GameEngine_dreamcast.vcxproj
workspace/GameEngine/GameEngine_linux/: GameEngine_linux.vcxproj
workspace/GameEngine/GameEngine_win32/: GameEngine_win32.vcxproj
